--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,18 @@
+/* ## Image Removal ## */
+/* hides the image provided by twitch */
+.goal_widget__image {
+	display: none;
+}
+
+/* removes space between text and the image provided by twitch */
+.goal_widget__body {
+	padding-left: 0 !important;
+}
+
+
+
+/* ## Bar Styling ## */
+/* this is the part of the bar that's active*/
 .goal_widget__progress_bar {
 	/*if you want you can put just a color or an image like I did*/
 	background: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2Fe5%2F89%2F95%2Fe5899572ecace2b0895b36db7703a001.gif&f=1&nofb=1");
@@ -7,20 +22,22 @@
 	opacity: 0.75;
 }
 
-.goal_widget__image {
-	display: none;
-}
-
+/* this is the part of the bar that isn't active. */
 .goal_widget {
 	background: #000 !important;
 }
 
+
+
+/* ## Text styling ## */
+/* this is the text for the goal you set */
 .goal_widget__metadata {
 	text-align: center;
 	color: #fff !important;
 	font-size: 100%;
 }
 
+/* this is the progress numbers e.g. 10/100 subs */
 .goal_widget__contributions {
 	color: #FFF !important;
 	display: block !important;
@@ -28,10 +45,7 @@
 	font-size: 75%;
 }
 
+/* this puts the progress numbers text in one line */
 .goal_widget__contributions > * {
 	display: inline-block;
-}
-
-.goal_widget__body {
-	padding-left: 0 !important;
 }
